--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -110,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': '1 The Droveway',\n",
+      "{'AddressLine1': 'The Bay',\n",
       " 'AddressLine2': 'St Margarets Bay',\n",
       " 'AddressLine3': 'Kent',\n",
       " 'AddressLine4': '',\n",
-      " 'BusinessName': 'FirstLight Bar & Café',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      " 'BusinessName': 'The Coastguard Inn',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.64041272672,\n",
-      " 'FHRSID': 1290215,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000083029',\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 1034540,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DH',\n",
-      " 'RatingDate': '2020-11-09T00:00:00',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-08-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('670db33248b5dd031d8b7673'),\n",
-      " 'geocode': {'latitude': '51.150625', 'longitude': '1.378231'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1290215',\n",
+      " '_id': ObjectId('670dcaa32121ef357b0442e2'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -145,7 +145,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -183,32 +183,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "newR = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "InsertOneResult(ObjectId('670dcab4ebe21195fdd72999'), acknowledged=True)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "establishments.insert_one(newR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "63bb10f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'AddressLine2': '146A Plumstead Rd',\n",
+      "  'AddressLine3': 'London',\n",
+      "  'BusinessName': 'Penang Flavours',\n",
+      "  '_id': ObjectId('670dcab4ebe21195fdd72999')}]\n",
+      "\n",
+      "Penang Flavours ID:  670dcab4ebe21195fdd72999\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "\n",
+    "# Set the appropriate Variables\n",
+    "query = {\"BusinessName\":\"Penang Flavours\", \n",
+    "         \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "         \"AddressLine3\":\"London\",}\n",
+    "fields = {\"BusinessName\": 1, \"AddressLine2\": 1, \"AddressLine3\": 1}\n",
+    "\n",
+    "# Cast the results as a list and save the results to a variable\n",
+    "results = list(establishments.find(query, fields))\n",
+    "\n",
+    "# Create a Variable to capture the new restaurant's ID\n",
+    "newID = results[0]['_id']\n",
+    "\n",
+    "# Pretty print the results\n",
+    "pprint(results)\n",
+    "\n",
+    "# Print the newID\n",
+    "print(f'\\nPenang Flavours ID:  {newID}')"
    ]
   },
   {
@@ -221,12 +292,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The BusinessTypeID for Restaurant/Cafe/Canteen is 1. \n",
+      " \n",
+      "\n",
+      "[{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('670dcaa32121ef357b0442e4')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('670dcaa32121ef357b0442e9')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('670dcaa32121ef357b0442ec')}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "\n",
+    "# Set the appropriate Variables\n",
+    "query = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
+    "fields = {\"BusinessType\": 1, \"BusinessTypeID\": 1}\n",
+    "limit = 3\n",
+    "\n",
+    "# Cast the results as a list and save the results to a variable\n",
+    "results = list(establishments.find(query, fields).limit(limit))\n",
+    "\n",
+    "# Set a variable to the recovered BusinessTypeID\n",
+    "rccBTID = results[0]['BusinessTypeID']\n",
+    "\n",
+    "# Print the variable\n",
+    "print(f'The BusinessTypeID for Restaurant/Cafe/Canteen is {rccBTID}. \\n \\n')\n",
+    "\n",
+    "# Pretty print the results\n",
+    "pprint(results)"
    ]
   },
   {
@@ -239,22 +346,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "establishments.update_one(\n",
+    "    {'_id': newID},\n",
+    "    {'$set':\n",
+    "        {'BusinessTypeID': rccBTID}\n",
+    "    }\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'BusinessName': 'Penang Flavours',\n",
+      "  'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('670dcab4ebe21195fdd72999')}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "# Set the appropriate Variables\n",
+    "query = {'_id': newID}\n",
+    "fields = {\"BusinessName\": 1, \"BusinessType\": 1, \"BusinessTypeID\": 1}\n",
+    "\n",
+    "# Cast the results as a list and save the results to a variable\n",
+    "results = list(establishments.find(query, fields))\n",
+    "\n",
+    "# Create a Variable to capture the new restaurant's ID\n",
+    "newID = results[0]['_id']\n",
+    "\n",
+    "# Pretty print the results\n",
+    "pprint(results)"
    ]
   },
   {
@@ -267,42 +414,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "768474a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "994"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "Dover_documents1 = establishments.count_documents({'LocalAuthorityName': 'Dover'})\n",
+    "Dover_documents1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a11d5f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeleteResult({'n': 994, 'ok': 1.0}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "establishments.delete_many({'LocalAuthorityName': 'Dover'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2a51aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "Dover_documents2 = establishments.count_documents({'LocalAuthorityName': 'Dover'})\n",
+    "Dover_documents2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8c356f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('670dcaa32121ef357b0445c9'),\n",
+      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
@@ -325,12 +554,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 38786, 'nModified': 38786, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "establishments.update_many(\n",
+    "    {},\n",
+    "    [\n",
+    "        { \"$set\": { \n",
+    "            \"geocode.longitude\": { \"$toDouble\": \"$geocode.longitude\" }, \n",
+    "            \"geocode.latitude\": { \"$toDouble\": \"$geocode.latitude\" } \n",
+    "        }}\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -344,10 +593,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 4091, 'nModified': 4091, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -356,22 +616,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 38786, 'nModified': 34695, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many(\n",
+    "    {},\n",
+    "    [\n",
+    "        { \"$set\": { \n",
+    "            \"RatingValue\": { \"$toInt\": \"$RatingValue\" }\n",
+    "        }}\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0deacaf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'RatingValue': 5,\n",
+      "  '_id': ObjectId('670dcaa32121ef357b0445c9'),\n",
+      "  'geocode': {'latitude': 51.083812, 'longitude': 1.195625}}]\n",
+      "\n",
+      "\n",
+      "Additional proof of concept:\n",
+      "Rating Value + 1 = 6\n",
+      "Latitude + 1 = 52.083812\n",
+      "Longitude + 1 = 2.1956249999999997\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "\n",
+    "# Set the appropriate Variables\n",
+    "fields = {\"geocode.longitude\": 1, \"geocode.latitude\": 1, \"RatingValue\": 1}\n",
+    "\n",
+    "# Cast the results as a list and save the results to a variable\n",
+    "results = list(establishments.find({}, fields, limit=1))\n",
+    "\n",
+    "# Pretty print the results\n",
+    "pprint(results)\n",
+    "\n",
+    "# Proof of Concept\n",
+    "long = results[0]['geocode']['longitude']\n",
+    "lat = results[0]['geocode']['latitude']\n",
+    "rv = results[0]['RatingValue']\n",
+    "\n",
+    "print(f'\\n\\nAdditional proof of concept:\\nRating Value + 1 = {rv+1}\\nLatitude + 1 = {lat+1}\\nLongitude + 1 = {long+1}')"
    ]
   }
  ],
